--- a/html/01_intro.html
+++ b/html/01_intro.html
@@ -2,65 +2,78 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tops</title>
+    <title>Html</title>
+    <!-- link css javascript jquery cdn fontosame link -->
 </head>
 
 <body>
-    <!-- comment  -->
-    <!-- <p>open tag </p>closetag -->
-    <!-- <p>parth</p> element -->
-    <!-- <p id=""> attribet -->
-    <!-- <br> <hr> self closing tag -->
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam non, deserunt possimus iure nulla neque eligendi
-        laboriosam ea fuga reprehenderit?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, enim. Totam magnam ab consequatur incidunt earum
-        ipsum inventore necessitatibus, officiis atque voluptatibus sit, laboriosam accusamus?</p>
-    <p>Lorem ipsum dolor sit.</p>
-
-    <!-- head  -->
+    <!-- <p>parth</p> element  -->
+    <!-- <p id="" class=""></p> -->
+    <!-- id="" class="" attribute -->
+    <!-- opening tag <p> closig tag </p>  -->
+    <!-- selfclosening <meta> -->
+    <p>Paragraph tag</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, perferendis!</p>
+    <p>profile task</p>
+    <!-- head -->
     <h1>Parth</h1>
     <h2>Parth</h2>
     <h3>Parth</h3>
     <h4>Parth</h4>
     <h5>Parth</h5>
     <h6>Parth</h6>
-    <!-- task h1 name address vision role langauge city -->
+    <br> line brake
+    <p>Lorem ipsum dolor sit<br> amet consectetur <br>adipisicing elit.<br> Accusamus, pariatur!</p>
+    <hr> H-line
+    <p>parth</p>
 
-    <!-- <br> line brake -->
-    <p>Lorem ipsum dolor<br> sit amet consectetur,<br> adipisicing elit.<br> Blanditiis ipsum labore necessitatibus cum
-        perferendis
-        sequi voluptates. Quo, vitae et!</p>
-    <!-- <hr> h-line  -->
-    <hr>
-    <i>ipsum </i>
-    <em>ipsum </em>
-    <b>ipsum </b>
-    <strong>ipsum </strong>
-    <del>ipsum </del>
-    <small>ipsum </small>
-    <big>ipsum </big>
-    <mark>Parth</mark>
-    <ins>Parth</ins>
-    <u>Parth</u>
-    <address>parth kamrej</address>
-    <pre>Lorem ipsum dolor
-sit amet consectetur, adipisicing 
-         elit. Error, porro.</pre>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, laboriosam.</p>
-
-    <!-- a2 + b2 + c2 -->
-    a<sup>2</sup>+
-    b<sup>2</sup>+
-    c<sup>2</sup><br>
-
-    <!-- H2 + 02=h20 -->
+    <b> b bold </b> <Br>
+    <strong> strong Bolder</strong> <Br>
+    <i> i italic</i> <Br>
+    <em> em italic</em> <Br>
+    <small> small Parth</small> <Br>
+    <big>Parth</big> <Br>
+    <big> Parth</big> <Br>
+    <!-- X2  H2-->
+    h20 a2 + b2 +c3 = 0
+    X<sup>2</sup><br>
+    a<sub>2</sub><br>
+    a<sub>2</sub>+b<sub>2</sub><br>
+    a<sub>2</sub>+b<sub>2</sub>+c<sub>2</sub><br>
+    a<sub>2</sub>+b<sub>2</sub>+c<sub>2</sub>= 0<br>
+    <h4>a<sub>2</sub>+b<sub>2</sub>+c<sub>2</sub>= 0<br></h4>
     H<sub>2</sub>
-    <h3>H <sub>2</sub></h3>
-    H <sub>2</sub> + O <sub>2</sub> = H<sub>2</sub>O
+    <p>Lorem ipsum dolor
+        sit amet consectetur adipisicing elit. Iusto, labore!</p>
+    <pre>proper formate</pre>
+    <pre><p>Lorem ipsum dolor
+sit amet, consectetur adipisicing elit. Porro earum tempore corporis doloremque illum similique delectus repellendus, velit explicabo vero?</p></pre>
+    <pre>
+    <address>kamrej
+surat, 
+gujarat,
+india
+    </address>
+</pre>
+    <u>Parth underline tag </u><br>
+    <ins>Parth underline tag</ins><br>
+    <del>Parth</del><br>
+    <mark>Parth</mark><br>
+    <code>printf("Parth")</code>
+    <p>printf|("Parth")</p>
+
+
+    <h1>H<sub>2</sub>O</h1>
+    <p>Lorem <b>ipsum</b> dolor sit <strong>amet</strong> consectetur adipisicing <i>elit</i> . <em>Quas</em> voluptatum
+        similique
+        reprehenderit soluta
+        cum corrupti modi, officiis incidunt nostrum vitae minus quia labore et consequatur ratione tempore excepturi
+        sequi quis assumenda? Rem excepturi assumenda quis blanditiis explicabo alias! Rerum nisi enim commodi omnis
+        modi, fuga numquam! Velit, incidunt! Eos, fugit.</p>
+
 </body>
 
 </html>
