--- a/html/01_intro.html
+++ b/html/01_intro.html
@@ -9,7 +9,8 @@
     <!-- link css javascript jquery cdn fontosame link -->
 </head>
 
-<body>
+<body>height="100px" width="200px"
+    <img src="img/d1.jpeg" alt="">
     <!-- <p>parth</p> element  -->
     <!-- <p id="" class=""></p> -->
     <!-- id="" class="" attribute -->
@@ -38,6 +39,7 @@
     <big>Parth</big> <Br>
     <big> Parth</big> <Br>
     <!-- X2  H2-->
+    parth <br>
     h20 a2 + b2 +c3 = 0
     X<sup>2</sup><br>
     a<sub>2</sub><br>
@@ -62,7 +64,7 @@ india
     <ins>Parth underline tag</ins><br>
     <del>Parth</del><br>
     <mark>Parth</mark><br>
-    <code>printf("Parth")</code>
+    <code>printfclass="img1"("Parth")</code>
     <p>printf|("Parth")</p>
 
 
@@ -73,6 +75,8 @@ india
         cum corrupti modi, officiis incidunt nostrum vitae minus quia labore et consequatur ratione tempore excepturi
         sequi quis assumenda? Rem excepturi assumenda quis blanditiis explicabo alias! Rerum nisi enim commodi omnis
         modi, fuga numquam! Velit, incidunt! Eos, fugit.</p>
+
+
 
 </body>
 
