--- a/html/01_img.html
+++ b/html/01_img.html
@@ -38,14 +38,25 @@
     <a href="">Home</a><br>
     <a href="01_intro.html">Home</a><br>
 
-    <a href="https://www.google.com" target="_blank">google</a><br>
-    <a href="https://www.facebook.com">Facebook</a><br>
-    <a href="https://www.amazon.in">Amazone</a><br>
-    <a href="https://www.pexels.com">Free img</a><br>
+
     <a href="01_intro.html" 100px" width="200px""><img src=" img/d1.jpeg" alt="Ggg" height="100px"
         width="200px"></a><br>
 
 
+    <img src="img/pexels-photo-3244513.jpeg" alt="p1" height="300px" width="500px"><br>
+
+    <a href="https://www.google.com" target="_blank">google</a><br>
+    <a href="https://www.facebook.com">Facebook</a><br>
+    <a href="https://www.amazon.in">Amazone</a><br>
+    <a href="https://www.pexels.com">Free img</a><br>
+
+    <a href="01_img.html">home</a>
+    <a href="About.html">About</a>
+    <a href="login.html">Login</a>
+    <a href="signup.html">Signup</a>
+    <a
+        href="https://images.pexels.com/photos/15964775/pexels-photo-15964775/free-photo-of-sensual-woman-posing-in-white-pants.jpeg?auto=compress&cs=tinysrgb&w=400&lazy=load"><img
+            src="img/d1.jpeg" alt="pw"></a>
 
 </body>
 
