--- a/html/01_intro.html
+++ b/html/01_intro.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>height="100px" width="200px"
-    <img src="img/d1.jpeg" alt="">
+    <img src="https://images.pexels.com/photos/14578357/pexels-photo-14578357.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+        alt="">
     <!-- <p>parth</p> element  -->
     <!-- <p id="" class=""></p> -->
     <!-- id="" class="" attribute -->
@@ -65,7 +66,7 @@ india
     <del>Parth</del><br>
     <mark>Parth</mark><br>
     <code>printfclass="img1"("Parth")</code>
-    <p>printf|("Parth")</p>
+    <p>printf|("Parth"0)</p>
 
 
     <h1>H<sub>2</sub>O</h1>
