--- a/html/02_Nest.html
+++ b/html/02_Nest.html
@@ -5,73 +5,172 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>List</title>
+    <link rel="icon" href="img/d1.jpeg">
 </head>
 
 <body>
+    <a href="">Home</a>
+    <a href="https://google.com" target="_blank">Google</a>
+    <a href="01_img.html" target="_blank">img</a>
+
     <h1>Nested List</h1>
-    <ol>
-        <li>Coffee</li>
-        <li>Tea
-            <ol>
-                <li>Hot Tea</li>
-                <li>Cold Tea</li>
-            </ol>
-        </li>
-        <li>Milk</li>
-    </ol>
 
-    <h2>Unorder Net</h2>
-    <ul>
-        <li>Cofee</li>
-        <li>Milk
-            <ul>
-                <li>Cow Milk</li>
-                <li>Gujarat Milk</li>
-            </ul>
-        </li>
-        <li>Tea</li>
-    </ul>
-
-
-    <!-- mix list -->
-    <ol>
-        <li>
-            Gujarat
-            <ul>
-                <li>Surat
+    <!-- <ol>
+        <li>Apple
+            <ul type="square">
+                <li>Green Apple</li>
+                <li>Red Apple
                     <ol>
-                        <li>Kamrej</li>
-                        <li>Varachha</li>
+                        <li>Red1</li>
+                        <li>Red2</li>
                     </ol>
                 </li>
-                <li>Baroda</li>
-                <li>Vapi</li>
             </ul>
         </li>
-        <li>MP</li>
-        <li>Ap</li>
+        <li>Banana</li>
+        <li>Mango</li>
+    </ol> -->
+
+    <ul>
+        <li>Tata</li>
+        <li>Jio
+            <ul>
+                <li>A-nil</li>
+                <li>Mu-Case
+                    <ul>
+                        <li>anant</li>
+                        <li>Akash
+                            <ul>
+                                <li>Pruthvi</li>
+                                <li>Lxami</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li>Idea</li>
+    </ul>
+    <h1>Both list Mix</h1>
+    <!-- <ul>
+        <li>Html
+            <ol>
+                <li>Html</li>
+                <li>Html5</li>
+            </ol>
+        </li>
+        <li>Css</li>
+        <li>Js
+            <ul>
+                <li>Js 2021</li>
+                <li>js 2022
+                    <ol>
+                        <li>2022 May</li>
+                        <li>2022 Jun</li>
+                    </ol>
+                </li>
+            </ul>
+        </li>
+        <li>Boot</li>
+    </ul> -->
+
+
+
+
+
+
+    <h1>order List</h1>
+    <!-- ol oreder list li list  -->
+    <h2>defualt lisi number list</h2>
+    <ol>
+        <li>Parth</li>
+        <li>Bmw</li>
+        <li>Audi</li>
+    </ol>
+    <h2>Alphabet capital</h2>
+    <ol type="A">
+        <li>Parth</li>
+        <li>Bmw</li>
+        <li>Audi</li>
+    </ol>
+    <h2>Alphabet small</h2>
+    <ol type="a">
+        <li>Parth</li>
+        <li>Bmw</li>
+        <li>Audi</li>
+    </ol>
+    <h2>Romance Capital</h2>
+    <ol type="I">
+        <li>Parth</li>
+        <li>Bmw</li>
+        <li>Audi</li>
+    </ol>
+    <h2>Romance small</h2>
+    <ol type="i">
+        <li>Parth</li>
+        <li>Bmw</li>
+        <li>Audi</li>
     </ol>
 
-    <p>coffee</p>
-    <p>coffee is hot</p>
 
-    <!-- dl descript list trem data -->
+    <h1>Unorder List </h1>
+    <!-- unorder list ul list li  -->
+    <h2>defualt disc list</h2>
+    <ul>
+        <li>India</li>
+        <li>India2</li>
+        <li>India3</li>
+        <li>India4</li>
+        <li>India5</li>
+    </ul>
+
+    <h2>circle list</h2>
+    <ul type="circle">
+        <li>India</li>
+        <li>India2</li>
+        <li>India3</li>
+        <li>India4</li>
+        <li>India5</li>
+    </ul>
+    <h2>square list</h2>
+    <ul type="square">
+        <li>India</li>
+        <li>India2</li>
+        <li>India3</li>
+        <li>India4</li>
+        <li>India5</li>
+    </ul>
+    <h2>none list</h2>
+    <ul type="none">
+        <li>India</li>
+        <li>India2</li>
+        <li>India3</li>
+        <li>India4</li>
+        <li>India5</li>
+    </ul>
+
+    <!-- dl Description Lists  dt term  dd data -->
     <dl>
-        <dt>coffee
-        <dd>-coffee is hot</dd>
-        </dt>
-        <dt>Tea
-        <dd>-Tea is hot</dd>
-        <dd>-tea is cold</dd>
-        </dt>
+        <dt>Coffee</dt>
+        <dd>-Coffee is Hot</dd>
+        <dt>Tea</dt>
+        <dd>-Tea is Hot</dd>
+        <dd>-Tea is Cold</dd>
+        <dt>Water</dt>
+        <dd>-Water is Hot</dd>
+        <dd>-Water is Cold</dd>
+        <dd>Water are both</dd>
 
-        <dt>Water
-        <dd>-Water is hot</dd>
-        <dd>-Water is cold</dd>
-        <dd> -no water</dd>
-        </dt>
     </dl>
+
+
+
+
+
+
+
+
 
 </body>
 
