--- a/html/04_com.html
+++ b/html/04_com.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>Com</h1>
+    <img src="img/pexels-photo-3244513.jpeg" alt="" width="100%" height="500px">
+
 </body>
 
 </html>
