--- a/html/02_list.html
+++ b/html/02_list.html
@@ -3,77 +3,111 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>list</title>
-
+    <title>Document</title>
 </head>
 
 <body>
-    <h1>List</h1>
-    <h2>Order List and Unorder List</h2>
-    <h3>Order list</h3>
-    <!-- ol order List -->
-    <!-- li list -->
-    <ol type="1">
-        <li>Tops</li>
-        <li>Jio</li>
-        <li>Vadaphoone</li>
+    <h1>list order and unorder</h1>
+    <!-- orer list ol list li -->
+    <!-- type list  1 A a I i  -->
+    <h3> Number List Order List</h3>
+    <ol type="">
+        <li>Paarth</li>
+        <li>Ram</li>
+        <li>Jony</li>
+        <li>Paarth</li>
+        <li>Ram</li>
+        <li>Jony</li>
     </ol>
-    <h4>Alphabet Capital</h4>
+
+
+    <!-- type list  1 A a I i  -->
+    <h3> Capital Alphbet List Order List</h3>
     <ol type="A">
-        <li>Tops</li>
-        <li>Jio</li>
-        <li>Vadaphoone</li>
+        <li>Paarth</li>
+        <li>Ram</li>
+        <li>Jony</li>
+        <li>Paarth</li>
+        <li>Ram</li>
+        <li>Jony</li>
     </ol>
 
-    <h4>samll Alphabet </h4>
+    <h3> Small Alphbet List Order List</h3>
     <ol type="a">
-        <li>Tops</li>
-        <li>Jio</li>
-        <li>Vadaphoone</li>
+        <li>Paarth</li>
+        <li>Ram</li>
+        <li>Jony</li>
+        <li>Paarth</li>
+        <li>Ram</li>
+        <li>Jony</li>
     </ol>
-
-    <h4>Romance Capital Number</h4>
+    <h3>Capital Romance Number List Order List</h3>
     <ol type="I">
-        <li>Tops</li>
-        <li>Jio</li>
-        <li>Vadaphoone</li>
+        <li>Paarth</li>
+        <li>Ram</li>
+        <li>Jony</li>
+        <li>Paarth</li>
+        <li>Ram</li>
+        <li>Jony</li>
     </ol>
-    <h4>Romance small Number </h4>
+
+    <h3>small Romance Number List Order List</h3>
     <ol type="i">
-        <li>Tops</li>
-        <li>Jio</li>
-        <li>Vadaphoone</li>
+        <li>Paarth</li>
+        <li>Ram</li>
+        <li>Jony</li>
+        <li>Paarth</li>
+        <li>Ram</li>
+        <li>Jony</li>
     </ol>
 
+    <h1>Unorder List</h1>
+    <!-- Unorder List Ul List li  -->
+    <!-- type disc circle squar none  -->
+    <h3>Disc Type Unorder List</h3>
+    <ul type="">
+        <li>Rinkal</li>
+        <li>Shruti</li>
+        <li>Monika</li>
+        <li>Mirali</li>
+    </ul>
+    <h3>Circle Type Unorder List</h3>
+    <ul type="Circle">
+        <li>Rinkal</li>
+        <li>Shruti</li>
+        <li>Monika</li>
+        <li>Mirali</li>
+    </ul>
 
-    <h3>Unorder List</h3>
-    <!-- ul unorder list -->
-    <!-- li list -->
-    <ul type="disc">
-        <li>Virat</li>
-        <li>Anushka</li>
-        <li>vamika</li>
-    </ul>
-    <h4>Circle unorderlist</h4>
-    <ul type="circle">
-        <li>Virat</li>
-        <li>Anushka</li>
-        <li>vamika</li>
-    </ul>
-    <h4>None unorderlist</h4>
+    <h3>None Type Unorder List</h3>
     <ul type="none">
-        <li>Virat</li>
-        <li>Anushka</li>
-        <li>vamika</li>
+        <li>Rinkal</li>
+        <li>Shruti</li>
+        <li>Monika</li>
+        <li>Mirali</li>
     </ul>
-    <h4>Square unorderlist</h4>
+    <h3>square Type Unorder List</h3>
     <ul type="square">
-        <li>Virat</li>
-        <li>Anushka</li>
-        <li>vamika</li>
+        <li>Rinkal</li>
+        <li>Shruti</li>
+        <li>Monika</li>
+        <li>Mirali</li>
     </ul>
+
+
+    <!-- dl describ List dt team dd data  l -->
+
+    <dl>
+        <dt>Tea</dt>
+        <dd>-Tea is hot drink of India</dd>
+        <dd>-Tea is cold drink of India</dd>
+        <dt>Coffee</dt>
+        <dd>-Coffee is hot drink of India</dd>
+        <dt>Water</dt>
+        <dd>-Water is hot and Cold drink of India</dd>
+
+    </dl>
 </body>
 
 </html>
