--- a/html/02_list1.html
+++ b/html/02_list1.html
@@ -9,26 +9,81 @@
 </head>
 
 <body>
+    <h2>Nest List </h2>
     <ul>
-        <li>Tata</li>
-        <li>Jio
-            <ul>
-                <li>A-nil</li>
-                <li>Mu-Case
+        <li>Tata
+            <ul type="none">
+                <li>Auto</li>
+                <li>Software
                     <ul>
-                        <li>anant</li>
-                        <li>Akash
+                        <li>Bolet
                             <ul>
-                                <li>Pruthvi</li>
-                                <li>Lxami</li>
+                                <li>Red</li>
+                                <li>Pink</li>
                             </ul>
                         </li>
+                        <li>Train</li>
                     </ul>
                 </li>
+                <li>Shoe</li>
             </ul>
         </li>
-        <li>Idea</li>
+        <li>Bata</li>
+        <li>Relience</li>
+        <li>Maruti</li>
     </ul>
+
+    <ol>
+        <li>Tata
+            <ol>
+                <li>Auto</li>
+                <li>Software
+                    <ol>
+                        <li>Bolet
+                            <ol>
+                                <li>Red</li>
+                                <li>Pink</li>
+                            </ol>
+                        </li>
+                        <li>Train</li>
+                    </ol>
+                </li>
+                <li>Shoe</li>
+            </ol>
+        </li>
+        <li>Bata</li>
+        <li>Relience</li>
+        <li>Maruti</li>
+    </ol>
+
+
+    <h3> both nest list</h3>
+    <ol>
+        <li>Banana</li>
+        <li>Mango
+            <ul>
+                <li>Keshar
+                    <ol>
+                        <li>Junaghad</li>
+                        <li>Surat
+                            <ul>
+                                <li>Kesut
+                                    <ul>
+                                        <li>Ke-1</li>
+                                        <li>Rat-1</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>Baroda</li>
+                    </ol>
+                </li>
+                <li>Haufus</li>
+                <li>Badam</li>
+            </ul>
+        </li>
+        <li>Apple</li>
+    </ol>
 </body>
 
 </html>
