--- a/html/03_Table.html
+++ b/html/03_Table.html
@@ -3,38 +3,32 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
 </head>
 
 <body>
     <h1>Table</h1>
-    <table border="1">
-        <!-- tr table row  -->
+    <table border="1" height="200px" width="100%">
+        <!-- table row tr  -->
         <tr>
-            <!-- th table head td table data  -->
-            <th>Name</th>
-            <th>Age</th>
+            <!-- table data td th table head  -->
+            <td>Person</td>
+            <td>Age</td>
         </tr>
         <tr>
-            <td>Denish</td>
-            <td>25</td>
+            <td>jony</td>
+            <td>20</td>
         </tr>
         <tr>
-            <td>Parth</td>
-            <td>25</td>
+            <td>Jarry</td>
+            <td>10</td>
         </tr>
         <tr>
-            <td>Priya</td>
-            <td>26</td>
-        </tr>
-        <tr>
-            <td>Shruti</td>
-            <td>24</td>
+            <td>Monika</td>
+            <td>13</td>
         </tr>
     </table>
-
 </body>
 
 </html>
