--- a/html/03_Table2.htm
+++ b/html/03_Table2.htm
@@ -3,46 +3,61 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>Table Colspan Rowspan</h1>
-    <table border="1">
+    <table border="1" width="100%">
         <tr>
-            <th>Column1</th>
-            <th>column2</th>
-            <th>column3</th>
+            <td rowspan="3">colspan1</td>
+            <td colspan="3">colspan1</td>
         </tr>
         <tr>
-            <td rowspan="2">parth</td>
-            <td rowspan="2">swayam</td>
-            <td>krunal</td>
+            <td colspan="2">colspan1</td>
+            <td rowspan="2">colspan1</td>
         </tr>
         <tr>
-            <!-- <td>parth</td> -->
-            <!-- <td>2</td> -->
-            <td>3</td>
+            <td>colspan1</td>
+            <td>colspan1</td>
         </tr>
         <tr>
-            <td colspan="3">1</td>
-            <!-- <td>2</td> -->
-            <!-- <td>3</td> -->
+            <td rowspan="2">colspan1</td>
+            <td rowspan="2">colspan1</td>
+            <td rowspan="2">colspan1</td>
+            <td>colspan1</td>
         </tr>
         <tr>
-            <th colspan="2">Column1</th>
-            <!-- <th>column2</th> -->
-            <th rowspan="2">column3</th>
+            <td>colspan1</td>
         </tr>
         <tr>
-            <th>Column1</th>
-            <th>column2</th>
-            <!-- <th>column3</th> -->
+            <td rowspan="3">colspan1</td>
+            <td>colspan1</td>
+            <td>colspan1</td>
+            <td rowspan="2">colspan1</td>
+        </tr>
+        <tr>
+            <td>colspan1</td>
+            <td>colspan1</td>
+        </tr>
+        <tr>
+            <td>colspan1</td>
+            <td>colspan1</td>
+            <td>colspan1</td>
+        </tr>
+        <tr>
+            <td>colspan1</td>
+            <td>colspan1</td>
+            <td>colspan1</td>
+            <td>colspan1</td>
+        </tr>
+        <tr>
+            <td>colspan1</td>
+            <td>colspan1</td>
+            <td>colspan1</td>
+            <td>colspan1</td>
         </tr>
     </table>
-
 </body>
 
 </html>
