--- a/html/04_marquee.html
+++ b/html/04_marquee.html
@@ -3,28 +3,33 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>marquee tag</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <marquee behavior="" direction="">50% off </marquee>
-    <marquee behavior="" direction="right">50% off </marquee>
-    <marquee behavior="" direction="up">50% off </marquee>
-    <marquee behavior="" direction="down">Parth</marquee>
+    <marquee behavior="" direction="">%0%</marquee>
+    <marquee behavior="" direction="left"><img src="https://stock.adobe.com/search?k=50%20off" alt="s2"></marquee>
 
-    <marquee width="60%" direction="up" height="100px">
-        This is a sample scrolling text that has scrolls in the upper direction.
+    <marquee behavior="" direction="Up">%0%</marquee>
+    <marquee behavior="" direction="Down">%0%</marquee>
+    <marquee behavior="" direction="Right">%0%</marquee>
+    <marquee behavior="" direction="left" width="30%" style="border: 1px solid red;">%0%</marquee>
+    <hr>
+    <marquee behavior="" direction="left" width="30%" vspace="0" hspace="20" style="border: 1px solid red;">%0%
     </marquee>
-    <marquee behavior="scroll" direction="" scrollamount="">Parth</marquee>
-    <marquee behavior="scroll" direction="" scrollamount="10" bgcolor="red">Parth</marquee>
-    <marquee behavior="slide" direction="" scrollamount="10" bgcolor="red">Parth</marquee>
-    <marquee behavior="alternate" style="border:solid" direction="down" height="100px" width="100px">
-        <marquee behavior="alternate" direction="">Parth</marquee>
+
+    <marquee behavior="" direction="" scrollamount="30">Parth</marquee>
+    <!--  behavior scroll slid alternet  -->
+
+    <marquee behavior="slide" direction="" bgcolor="red">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
+        voluptas.
     </marquee>
-    <marquee direction="down" width="250" height="200" behavior="alternate" style="border:solid">
-        <marquee behavior="alternate"> This text will bounce </marquee>
+
+
+
+    <marquee behavior="alternate" direction="down" width="300" height="200" style="border: 1px solid red;">
+        <marquee behavior="alternate">Parth</marquee>
     </marquee>
 
 
