--- a/html/parth.html
+++ b/html/parth.html
@@ -1,7 +1,52 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta name="yo yo " aria-details="album ">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.7.0.js"
+        integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.js"
+        integrity="sha512-p55Bpm5gf7tvTsmkwyszUe4oVMwxJMoff7Jq3J/oHaBk+tNQvDKNz9/gLxn9vyCjgd6SAoqLnL13fnuZzCYAUA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.css"
+        integrity="sha512-rV4fiystTwIvs71MLqeLbKbzosmgDS7VU5Xqk1IwFitAM+Aa9x/8Xil4CW+9DjOvVle2iqg4Ncagsbgu2MWxKQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        .nik {
+            margin-left: 150px;
+        }
+    </style>
 </head>
+
+<body>
+    <div class="nik">
+        <div class="bxslider">
+            <div><img
+                    src="https://images.pexels.com/photos/16878528/pexels-photo-16878528/free-photo-of-city-nature-art-building.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                    width="100%" height="500px" title="nature1" /></div>
+            <div><img
+                    src="https://images.pexels.com/photos/5507250/pexels-photo-5507250.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                    width="100%" height="500px" title="nature4" /></div>
+            <div><img
+                    src="https://images.pexels.com/photos/16878528/pexels-photo-16878528/free-photo-of-city-nature-art-building.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                    width="100%" height="500px" title="nature5" /></div>
+        </div>
+    </div>
+    <script>
+
+        $(function () {
+            $('.bxslider').bxSlider({
+
+                mode: 'fade',
+                captions: true,
+                slideWidth: 1000
+            });
+        });
+
+    </script>
+</body>
 
 </html>
