--- a/html/04_imgmap.html
+++ b/html/04_imgmap.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -11,9 +10,10 @@
 <body>
     <img src="img/workplace.jpg" alt="s1" usemap="#parth">
     <map name="parth">
-        <area shape="rect" coords="48,56,250,174" href="04_com.html" alt="s1">
-        <area shape="circle" coords="350,300,20" href="04_com.html" alt="s2">
-        <area shape="poly" coords="63,203,56,269,147,342,253,271,247,205" href="04_com.html" alt="s1">
+        <area shape="squre" coords="51,57,248,175" href="img/download (1).jpg" alt="s2">
+        <area shape="squre" coords="296,187,329,231" href="05_form.html" alt="s2">
+        <area shape="circle" coords="344,303,30" href="img/download.jpg" alt="s3">
+        <area shape="poly" coords="59,202,58,273,140,346,252,268,244,203" href="img/pexels-photo-3244513.jpeg" alt="s2">
     </map>
 </body>
 
