--- a/html/05_form.html
+++ b/html/05_form.html
@@ -8,18 +8,12 @@
 </head>
 
 <body>
-    <fieldset>
-        <legend>Login Form</legend>
-        <form action="" method="get">
-            Name: <input type="text"> <br><br>
-            Fname: <input type="text"><br><br>
-            Lname: <input type="text"><br><br>
-            <button>Save</button>
-        </form>
-    </fieldset>
-    <hr>
-    <!-- method get post  -->
-
+    <form action="07_form.html" method="post">
+        Name: <input type="text"><br><br>
+        FullName: <input type="text"><br><br>
+        <input type="submit" value="Save">
+        <!-- 20 + filed exam  -->
+    </form>
 </body>
 
 </html>
