--- a/html/07_login.html
+++ b/html/07_login.html
@@ -4,32 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form</title>
+    <title>Document</title>
 </head>
 
 <body>
+
+
     <fieldset>
         <legend>Login Form</legend>
         <center>
+            <h1>Login Form</h1>
             <form action="" method="post">
-                <h1>Login</h1>
-                <div>
-                    <img src="https://images.pexels.com/photos/16971540/pexels-photo-16971540/free-photo-of-woman-standing-with-gray-horse.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
-                        alt="" height="50px" width="50px" style="border-radius: 50%;">
-                </div>
 
-                <!-- <label for="name">Name</label>
-                <input type="text" name="" id="name" placeholder="Parth" required> <br><br> -->
-                <label for="Email">Email</label>
-                <input type="email" name="" id="Email" placeholder="parth@gmail.com" required> <br><br>
-                <label for="Password">Password</label>
-                <input type="password" name="" id="Password" placeholder="Password" required> <br><br>
-                <a href="">Forgot Password</a><br><br>
-                <button>Login</button><br><br>
-                <a href="">?Signup</a><br><br>
+                <label for="email"> Email-</label>
+                <input type="email" name="" id="email" placeholder="Modi123@ModiMail.com" required>
+                <Br><br>
+
+                <label for="Password"> Password</label>
+                <input type="password" name="" id="Password" readonly>
+                <br><br>
+                <input type="checkbox" name="" id="" checked>Remenber Password <br><br>
+                <input type="submit" value="Login"><br><br>
+
+                <pre><a href="">Forget Password</a>        <a href="">Signup</a></pre>
             </form>
         </center>
     </fieldset>
+
 
 </body>
 
