--- a/html/06_inputtype.html
+++ b/html/06_inputtype.html
@@ -8,42 +8,58 @@
 </head>
 
 <body>
-    <fieldset>
-        <legend>Form</legend>
-        <form action="" method="post" name="Sform">
-            <input type="text"> <br><br>
-            <input type="checkbox" name="" id="">Login<br><br>
-            <input type="color" name="" id=""><br><br>
-            <input type="date" name="" id=""><br><br>
-            <input type="datetime-local" name="" id=""><br><br>
-            <input type="email" name="" id=""><br><br>
-            <input type="file" name="" id=""><br><br>
-            <input type="hidden" name=""><br><br>
-            <input type="image" src="img/download (1).jpg" alt=""><br><br>
-            <input type="month" name="" id=""><br><br>
-            <input type="number" name="" id=""><br><br>
-            <input type="password" name="" id=""><br><br>
-            <input type="radio" name="" id="">Male
-            <input type="radio" name="" id="">FeMale<br><br>
-            <input type="range" name="" id="" max="10" min="0"><br><br>
-            <input type="search" name="" id=""><br><br>
-            <input type="button" value="Save"> <br><br>
-            <button>Save</button> <br><br>
-            <input type="submit" value="Save"> <br><br>
-            <input type="reset" value="Reset"><br><br>
-            <input type="tel" name="" id=""> <br><br> <br><br>
-            <input type="time" name="" id=""> <br><br>
-            <input type="url" name="" id=""> <br><br>
-            <input type="week" name="" id=""><br><br>
-            Comment <br> <textarea name="" id="" cols="10" rows="20"></textarea><br><br>
+    <input type="text">
+    <hr>
+    <input type="button" value="Login">
+    <hr>
+    <input type="checkbox" name="" id="">10th
+    <input type="checkbox" name="" id="">12th
+    <input type="checkbox" name="" id="">B.com
+    <input type="checkbox" name="" id="">MCA
+    <hr>
+    <input type="color" name="" id="">
+    <hr>
+    <input type="date" name="" id="">
+    <hr>
+    <input type="datetime-local" name="" id="">
+    <hr>
+    <input type="email" name="" id="">
+    <hr>
+    <input type="file" name="" id="">
+    <hr>
+    <input type="hidden" name="">
+    <hr>
+    <input type="image" src="img/download (1).jpg" alt="">
+    <hr>
+    <input type="month" name="" id="">
+    <hr>
+    <input type="number" name="" id="">
+    <hr>
+    <input type="password" name="" id="">
+    <hr>
+    <input type="radio" name="s1" id="">Male
+    <input type="radio" name="s1" id="">FeMale
+    <input type="radio" name="s1" id="">LGBT
+    <hr>
+    <input type="range" name="" id="">
+    <hr>
+    <input type="reset" value="REset">
+    <hr>
+    <input type="search" name="" id="">
+    <hr>
+    <input type="submit" value="Login">
+    <hr>
+    <input type="tel" name="" id="">
+    <hr>
+    <input type="time" name="" id="">
+    <hr>
+    <input type="url" name="" id="">
+    <hr>
+    <input type="week" name="" id="">
+    <hr>
 
-            <label for="name"> Name</label>
-            <input type="text" id="name">
-            <label for=""> Name</label>
-            <input type="text" id="">
-            name <input type="text">
-        </form>
-    </fieldset>
+
+
 
 </body>
 
