--- a/html/05_form.html
+++ b/html/05_form.html
@@ -4,15 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>form</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <form action="07_form.html" method="post">
+    <form action="" method="post">
+        method get show data in url limited post hide data in url
         Name: <input type="text"><br><br>
-        FullName: <input type="text"><br><br>
-        <input type="submit" value="Save">
-        <!-- 20 + filed exam  -->
+        FName: <input type="text"><br><br>
+        MName: <input type="text"><br><br>
+        LName: <input type="text"><br><br>
+        Addrress: <input type="text"><br><br>
+        Phone: <input type="text"><br><br>
+
+
+        <input type="button" value="Save">
     </form>
 </body>
 
