--- a/css/04_margin.html
+++ b/css/04_margin.html
@@ -8,14 +8,14 @@
         div{
             border: 1px solid red;
             /* margin-top: 100px;
-            margin-right: 100px; */
-            /* margin-bottom: 100px; */
-            /* margin-left: 100px; */
+            margin-right: 100px;
+            margin-bottom: 100px;
+            margin-left: 100px; */
             /* clock 12 3 6 9 */
-            /* margin:100px 100px 50px 10px; */
+            /* margin:100px 150px 200px 100px; */
             /* margin:100px 50px; */
-            /* margin: 30px; */
-            margin: auto;
+            margin: 30px;
+            /* margin: auto; */
 
             
         }
