--- a/css/06_display.html
+++ b/css/06_display.html
@@ -24,6 +24,7 @@
     </style>
 </head>
 <body>
+    <i class="fa-brands fa-facebook"></i>
     <div>
         <ul>
             <li> <a href="">Home</a></li>
